--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
   "homepage": "https://github.com/emilybache/GildedRose-Refactoring-Kata",
   "devDependencies": {
     "jest": "^24.9.0"
+  },
+  "dependencies": {
+    "approvals": "^4.0.0-beta.1"
   }
 }
